examples/v0.2/errors/null_arithmetic.nova
// Expected Error:
// Cannot perform operations on null.

value: U = null

print(value + 5)